# foxlogi-stockpiler

./: CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
data/: 76561198012791572_MapData.sav  test_extracted.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: dump_extraction.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dedup.rs  extract.rs  lib.rs  main.rs  pipeline.rs  state.rs  sync.rs
src-tauri/tests/: sync_integration.rs
