[package]
name = "foxlogi-stockpiler"
version = "0.1.0"
description = "Watches Foxhole .sav files and syncs extracted stockpile data to a remote server."
authors = ["Foxlogi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "foxlogi_stockpiler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pipeline: watch -> parse -> extract -> POST
gvas = { version = "0.11", features = ["serde"] }
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
